# DataMatching

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: Depth-Behavior.md  SCID-Behavior.md
examples/pre-globex/: ES-2025-08-12-pre-globex_ET.md
examples/saturday/: ES-2025-08-09-saturday_ET.md
examples/snapshot/: ES-2025-08-12-0930ET-snapshot.md
refdata/: instruments.yaml
src/sierra_sync/: cli.py
src/sierra_sync/config/: defaults.py  loader.py
src/sierra_sync/io_adapters/: cme_specs_loader.py  depth_reader.py  depth_writer.py  discovery.py  refdata_loader.py  scid_reader.py  scid_writer.py
src/sierra_sync/model/: refdata.py
src/sierra_sync/pipeline/: sync.py
src/sierra_sync/tools/: dump.py
src/sierra_sync/utils/: logging.py  market.py  sc_time.py
tests/unit/: test_cli.py  test_cli_config_override.py  test_cme_specs_loader.py  test_config.py  test_depth_reader.py  test_depth_writer.py  test_refdata_loader.py  test_sc_time.py  test_scid_reader.py  test_scid_writer.py
