[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sierra-sync"
version = "0.0.1"
description = "Deterministic trade and depth matcher for Sierra Chart"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Andy", email = "jablair1230@gmail.com" }]
license = { text = "Proprietary" }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_optional = true
pretty = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
